--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -5,7 +5,7 @@
     <h1 id="following">
       <%= current_user.followed_users.count %>
     </h1>
-    <h5>following</h5>
+    <h5 style="font-size:9px;">following</h5>
   </div>
 
   <div style="text-align:center;position:fixed;margin-top:3px;margin-left:52px;">
@@ -16,5 +16,5 @@
     <h1 id="followers">
       <%= current_user.followers.count %>
     </h1>
-    <h5>followers</h5>
+    <h5 style="font-size:9px;">followers</h5>
   </div>
