--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,12 @@
 
 
 <%= render 'profile' %>
-
+<% form_tag users_path, :method => 'get' do %>
+  <div style="position:fixed;top:500px;left:100px;">
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </div>
+<% end %>
 
 <% if @user.microposts.any? %>
 
