--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -13,7 +13,7 @@
 
   <barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>
 	  <% if current_user?(micropost.user) %>
-	    <%= link_to "X", micropost, method: :delete, data: { confirm: "You sure?" },title: micropost.content %>
+	    <%= link_to "X", micropost, method: :delete, data: { confirm: "Delete Post?" },title: micropost.content %>
 	  <% end %>
   </h3></barr>
 
