--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,8 +31,8 @@
 <%= link_to tagged_url(:tag => "music") do %>
 <bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">MUSIC</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "enews") do %>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">ENEWS</h5></bar>
+<%= link_to tagged_url(:tag => "celebs") do %>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CELEBS</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "recipes") do %>
 <bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">RECIPES</h5></bar>
