--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,5 +1,18 @@
-<%= form_tag :controller => 'users', :action => 'search', :method => 'get' do %>
-     <%= text_field_tag :search, params[:search], :id => 'search_field' %>
-     <%= submit_tag "Search", :name => nil %> 
-     <%= link_to_function "Clear", "$('search_field').clear()" %>
-<% end %>
+Ever wanted to ask your fellow girls how your dress looks? Or whether you should make a certain purchase? Welcome to FEMYNYN. A Female ONLY! social network. See and post photos, links, videos and text. Ask questions. Follow friends and other girls. FEMYNYN will be launching soon. But don't wait! A special pre-launch link will let you be one of the first to join this female only world. So join now and invite your friends to experience FEMYNYN pre-birth. http://femynyn.herokuapp.com All posts will remain after launch and all data is YOURS!
+
+
+
+
+
+FEMYNYN. A Female ONLY! social network. See and post photos, links, videos and text. Ask questions. Follow friends and other girls. FEMYNYN launching soon. But don't wait! Join now with the special pre-launch link, invite your friends and be the first to experience FEMYNYN pre-birth. http://femynyn.herokuapp.com
+
+
+
+
+WARNING! FEMALES ONLY! New Social Network. See & post photos, links, videos and text. Ask questions. Follow friends and other girls. FEMYNYN launching soon. But don't wait! Join NOW with this special pre-launch link http://femynyn.herokuapp.com
+
+
+
+
+
+WARNING! FEMALES ONLY! See & post photos, links, videos and text. Ask questions. Follow friends and other girls. FEMYNYN Join NOW with this special pre-launch link http://femynyn.herokuapp.com
