--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -14,6 +14,8 @@
   <barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>
 	  <% if current_user?(micropost.user) %>
 	    <%= link_to "X", micropost, method: :delete, data: { confirm: "Delete Post?" },title: micropost.content %>
+	  <% else %>
+	<%= micropost.votes_for %>
 	  <% end %>
   </h3></barr>
 
@@ -30,7 +32,7 @@
 	 	<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>✓</h3></barr>
 	  <% else %>
 		<%=  link_to(vote_up_micropost_path(micropost.id), :remote => true) do |f| %> 
-		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>	
+		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>like</h3></barr>	
 		<% end %>
 	  <% end %>
 	
@@ -65,7 +67,7 @@
 		<span style="color:white;position:absolute;right:256px;top:5px;"><%= image_tag micropost.user.avatar_url(:avatar) if micropost.user.avatar? %></span>
 		<h1 style="color:white;position:absolute;right:4px;top:5px;"><%= micropost.user.name %></h1>
 		<h6 style="font-size:8px;color:#CC337A;float:right;right:1px;"><%= time_ago_in_words(micropost.created_at) %> ago </h6>
-		<tbar style="position:absolute;font-size:15px;color:white;float:right;right:4px;top:40px;">Plus:<%= micropost.votes_for %></tbar>
+		<tbar style="position:absolute;font-size:15px;color:white;float:right;right:4px;top:40px;">Likes:<%= micropost.votes_for %></tbar>
 	</div>
 	
 	<div style="position:absolute;top:60px;right:2px;width:254px;">
