--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -32,7 +32,7 @@
 	 	<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>✓</h3></barr>
 	  <% else %>
 		<%=  link_to(vote_up_micropost_path(micropost.id), :remote => true) do |f| %> 
-		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>like</h3></barr>	
+		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3 style="font-size:11px;">like</h3></barr>	
 		<% end %>
 	  <% end %>
 	
