--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,22 +1,22 @@
 <ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;box-shadow: 0px 2px 2px 0px black;"></ar>
 <bar data-toggle="modal" href="#entermodal" style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
-	<h1 style="margin-top:2px;font-size:22px;color:grey">F e m y n y n</h1>
+	<h1 style="margin-top:2px;font-size:22px;color:grey">V I L A J I O</h1>
 </bar>
 <div style="margin: 0px auto;width:960px;">
 <%= link_to tagged_url(:tag => "health") do %>
-<bar style="position:fixed;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">HEALTH</h5></bar>
+<bar style="position:fixed;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">BOYS</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "beauty") do %>
-<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">BEAUTY</h5></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">GIRLS</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "fashion") do %>
-<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">FASHION</h5></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">COUPLES</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "living") do %>
-<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">LIVING</h5></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CAUGHT</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "marriage") do %>
-<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">MARRIAGE</h5></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">TONIGHT</h5></bar>
 <% end %>
 <bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:56px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
 
@@ -26,19 +26,19 @@
 
 </bar>
 <%= link_to tagged_url(:tag => "mums") do %>
-<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">MUMS</h5></bar>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">LOL</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "music") do %>
-<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">MUSIC</h5></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">OMG</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "celebs") do %>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CELEBS</h5></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CUTE</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "recipes") do %>
-<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">RECIPES</h5></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">FAIL</h5></bar>
 <% end %>
 <%= link_to tagged_url(:tag => "shopping") do %>
-<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">SHOPPING</h5></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">WTF</h5></bar>
 <% end %>
 </div>
 <div style="margin: 0px auto;width:960px;">
@@ -81,7 +81,7 @@ background-image: -webkit-gradient(
 
 <%= link_to signout_path, method: "delete" do %><bar style="z-index:999;position:fixed;bottom:0px;left:0px;width:106px;height:40px;">
 	
-	<h5 style="margin-top:25px;">Sign Out</h5>
+	<h5 style="margin-top:25px;">Leave Slough</h5>
 </bar1><% end %>
 <% end %>
 
