--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -40,7 +40,7 @@
 <img style="position:absolute;top:0px;left:0px;margin: 0px auto;width:100%;" src="/assets/femynyn.png"/>
 
 	<bar data-toggle="modal" href="#entermodal" style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
-		<h1 style="margin-top:2px;font-size:22px;color:grey">F e m y n y n</h1>
+		<h1 style="margin-top:2px;font-size:22px;color:grey">V i l a j i o</h1>
 	</bar>
 
 
@@ -48,6 +48,12 @@
 </div>
 
 <% end %>
+
+
+
+
+
+
 
 
 <script type="text/javascript">
