--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= javascript_include_tag "jquery-1.8.0.min" %>
   <%= javascript_include_tag "jquery.embedly.min" %>
   <%= javascript_include_tag "jquery.masonry.min" %>
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
   <%= csrf_meta_tags %>
 
