--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -101,7 +101,7 @@ square {
 	border: 1px solid #12000b;
 }
 square:hover {
-	background:#620631;
+	background:#1d1d1d;
 }
 
 ar {
@@ -149,7 +149,7 @@ ar {
 }
 
 .bar:hover {
-	background:#59052C;
+	background:#1d1d1d;
 	cursor: hand;
 }
 
@@ -183,7 +183,7 @@ tbar o {
 }
 
 tbar:hover {
-	background:#59052C;
+	background:#1d1d1d;
 	cursor: hand;
 }
 
@@ -367,7 +367,7 @@ font-weight:bold;
 }
 
 .tag:hover {
-  color:#8a0053;
+  color:#1d1d1d;
   padding:5px;
   margin: 5px;
   float:left;
@@ -1083,9 +1083,9 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   background-color: black;
-  border: 1px solid #59052C;
+  border: 1px solid #1d1d1d;
   height: 50px;
-  color:white;
+  color:grey;
 
 }
 textarea:focus,
@@ -1488,7 +1488,7 @@ select:focus:required:invalid:focus {
 .input-prepend .active,
 .input-append .active {
   background-color: #bbff33;
-  border-color: #669900;
+  border-color: #1d1d1d;
 }
 .input-prepend .add-on,
 .input-prepend .btn {
@@ -2516,7 +2516,7 @@ button.close {
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   vertical-align: middle;
   cursor: pointer;
-  background-color: #616161;
+  background-color: #1d1d1d;
   background-image: -moz-linear-gradient(top, #666666, #595959);
   background-image: -ms-linear-gradient(top, #666666, #595959);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666666), to(#595959));
