--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -2,5 +2,8 @@
 <tbar data-toggle="modal" href="#link" style="position:absolute;margin-left:200px;width:200px;height:150px;"><p>Link</p></tbar>
 <tbar data-toggle="modal" href="#video" style="position:absolute;margin-left:0px;top:150px;width:200px;height:150px;"><p>Video</p></tbar>
 <tbar data-toggle="modal" href="#text" style="position:absolute;margin-left:200px;top:150px;width:200px;height:150px;"><p>Text</p></tbar>
+<tbar data-toggle="modal" href="#text" style="position:absolute;margin-left:400px;width:200px;height:150px;"><p></p></tbar>
+<tbar data-toggle="modal" href="#text" style="position:absolute;margin-left:400px;top:150px;width:200px;height:150px;"><p>Text</p></tbar>
+
 
 
