--- a/app/views/shared/_trendusers.html.erb
+++ b/app/views/shared/_trendusers.html.erb
@@ -1,5 +1,5 @@
-
-<ar style="z-index:50;position:absolute;right:240px;margin-top:40px;margin-left:10px;width:538px;height:399px;">
+<div style="margin: 0px auto;width:980px;">
+<ar style="z-index:50;position:absolute;margin-left:255px;margin-top:40px;width:720px;height:399px;">
 
 
 
@@ -42,7 +42,7 @@
 
 
 
-<ar style="z-index:50;position:absolute;right:779px;margin-top:40px;margin-left:0px;width:187px;height:399px;">
+<ar style="z-index:50;position:absolute;margin-top:40px;margin-left:0px;width:255px;height:399px;">
 
 
 <div style="margin-top:35px;">	
@@ -54,7 +54,7 @@
 </div>
 
 </ar>
-
+</div>
 
 
 
