--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,8 @@
 <div class="modal hide" id="text" style="width:600px;height:500px;background-color:black;"><%= render 'shared/text_form' %></div>
 <div class="modal hide" id="video" style="width:600px;height:500px;background-color:black;"><%= render 'shared/video_form' %></div>
 <div class="modal hide" id="picture" style="width:600px;height:500px;background-color:black;"><%= render 'shared/picture_form' %></div>
+<div class="modal hide" id="school" style="width:600px;height:500px;background-color:black;"><%= render 'shared/school_form' %></div>
+<div class="modal hide" id="year" style="width:600px;height:500px;background-color:black;"><%= render 'shared/year_form' %></div>
 </section>
 
 <% end %>
