--- a/app/views/shared/_video_form.html.erb
+++ b/app/views/shared/_video_form.html.erb
@@ -9,7 +9,7 @@
 <span style="position:fixed;margin-left:168px;top:291px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
 
 <tbar style="position:fixed;margin-left:50px;top:410px;width:120px;height:42px;"><p>Tags</p></tbar>
-<span style="position:fixed;margin-left:168px;top:411px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
+<span style="position:fixed;margin-left:168px;top:411px;"><%= f.text_area :content, :rows => 5 , style: "width:370px;height:30px;" %></span>
 
 <span style="position:fixed;margin-left:50px;top:490px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
 
