--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -56,11 +56,18 @@
 $(function() {
 	var availableSchools = [
 		"Slough Grammar School",
-    	"Wexham High School",
+    	"Wexham School",
     	"Burnham Grammar School",
     	"Herschel Grammar School",
-    	"Westgate School",
-    	"Langley Academy",
+    	"The Westgate School",
+    	"The Langley Academy",
+		"Windsor Boys School",
+		"Windsor Girls School",
+		"Baylis Court School",
+		"Beechwood School",
+		"Slough and Eton",
+		"St Bernard's Catholic Grammar School",
+		"St Joseph's Catholic High School",
     	"East Berkshire College",
         "Langley Grammar School"
     ];
