--- a/app/views/shared/_picture_form.html.erb
+++ b/app/views/shared/_picture_form.html.erb
@@ -6,7 +6,7 @@
 <span style="position:fixed;margin-left:168px;top:230px;"><%= f.file_field :image, class: "bar", style: "width:377px;height:40px;" %></span>
 
 <tbar style="position:fixed;margin-left:50px;top:290px;width:120px;height:102px;"><p>Description</p></tbar>
-<span style="position:fixed;margin-left:168px;top:291px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
+<span style="position:fixed;margin-left:168px;top:291px;"><%= f.text_area :content, :rows => 5 , style: "width:370px;height:91px;" %></span>
 
 <tbar style="position:fixed;margin-left:50px;top:410px;width:120px;height:42px;"><p>Tags</p></tbar>
 <span style="position:fixed;margin-left:168px;top:411px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
