--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -69,7 +69,9 @@
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p><%= h truncate(current_user.school, :length => 25) %></p></bar2>
 	<% end %>
 	
-	<%= link_to tagged_url(:tag => current_user.schoolyear) do %>
+	<% @year = [current_user.school, current_user.schoolyear] %>
+	
+	<%= link_to tagged_url(:tag => @year) do %>
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p><%= raw h truncate(current_user.schoolyear, :length => 23) %></p></bar2>
 	<% end %>
 	
@@ -83,6 +85,8 @@
 	
 	
 </div>
+
+
 <script type="text/javascript">
 $(document).ready(function(){
 
