--- a/app/views/shared/_year_form.html.erb
+++ b/app/views/shared/_year_form.html.erb
@@ -11,8 +11,7 @@
 <tbar style="position:fixed;margin-left:50px;top:350px;width:120px;height:102px;"><p>Description</p></tbar>
 <span style="position:fixed;margin-left:168px;top:351px;"><%= f.text_area :content, :rows => 5 , style: "width:370px;height:91px;" %></span>
 
-
 <span style="position:fixed;margin-left:50px;top:490px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
-<%= f.hidden_field :tag_list, :value => current_user.schoolyear %>
+<%= f.hidden_field :tag_list, :value => [352345, current_user.school, 4345, current_user.schoolyear, 4343, 234523] %>
 <% end %>
 
