--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,19 +3,19 @@
 	<h1 style="margin-top:2px;font-size:22px;color:grey">V I L A J I O</h1>
 </bar>
 <div style="margin: 0px auto;width:960px;">
-<%= link_to tagged_url(:tag => "health") do %>
+<%= link_to tagged_url(:tag => "boys") do %>
 <bar style="position:fixed;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">BOYS</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "beauty") do %>
+<%= link_to tagged_url(:tag => "girls") do %>
 <bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">GIRLS</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "fashion") do %>
+<%= link_to tagged_url(:tag => "couples") do %>
 <bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">COUPLES</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "living") do %>
+<%= link_to tagged_url(:tag => "caught") do %>
 <bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CAUGHT</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "marriage") do %>
+<%= link_to tagged_url(:tag => "tonight") do %>
 <bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">TONIGHT</h5></bar>
 <% end %>
 <bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:56px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
@@ -25,19 +25,19 @@
 	  <% end %>
 
 </bar>
-<%= link_to tagged_url(:tag => "mums") do %>
+<%= link_to tagged_url(:tag => "lol") do %>
 <bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">LOL</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "music") do %>
+<%= link_to tagged_url(:tag => "omg") do %>
 <bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">OMG</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "celebs") do %>
+<%= link_to tagged_url(:tag => "cute") do %>
 <bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">CUTE</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "recipes") do %>
+<%= link_to tagged_url(:tag => "fail") do %>
 <bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">FAIL</h5></bar>
 <% end %>
-<%= link_to tagged_url(:tag => "shopping") do %>
+<%= link_to tagged_url(:tag => "wtf") do %>
 <bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"><h5 style="margin-top:20px;">WTF</h5></bar>
 <% end %>
 </div>
