--- a/app/views/microposts/tagged.html.erb
+++ b/app/views/microposts/tagged.html.erb
@@ -1,33 +1,16 @@
 <%= render 'shared/header' %>
 
-<div id="container" style="margin-right:240px;margin-left:1%;display:block;">
+<div id="container" style="margin: 0 auto;left:10px;margin-bottom:200px;">
 	<%= render Micropost.tagged_with(params[:tag])  %>
 </div>
 
-<aside style="position:absolute;margin-top:10px;">
-   <% Micropost.tagged_with(params[:tag]).where(kyahai: "3").each do |micropost| %>
-
-	<div style=""class="question" >
-	<div data-toggle="modal" href="#<%= micropost.id %>4" style="cursor:pointer;cursor:hand;" >
-		<span style="color:white;top:5px;float:left;margin:2px;"><%= image_tag micropost.user.avatar_url(:avatar) if 			micropost.user.avatar? %></span>
-		<span><h5 style="font-size:15px;"><%= micropost.user.name %>:</h5> </span>
-		<div style="color:black;font-size:13px;"><%= micropost.content %></div>
-		<span style="font-weight:bold;font-size:10px;font-weight:normal;float:right;"><%= time_ago_in_words(micropost.created_at) %> ago </span>
-
-	  <span ><%= image_tag micropost.image_url(:micropost) if micropost.image? %></span>
-	  <div class="link"><a href= <%= micropost.link %> ></a></div>
-	</div>
-	</div>
-
-
-   <% end %>
-</aside>
 
 <script type="text/javascript">
 $(window).load(function(){
 var $container = $('#container');
 $container.imagesLoaded(function(){
   $container.masonry({
+				isFitWidth: true,
     itemSelector : '.item',
     columnWidth : 240
   });
